quiz translation api added